as I need to use external libraries, make it simple gradle project